deployment/mlflow/base/mlflow-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mlflow
  name: mlflow
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
      name: mlflow
    spec:
      serviceAccountName: mlflow
      containers:
        - name: mlflow
          image: ayushghimiresharma/mlflow:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
          livenessProbe:
            failureThreshold: 30
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 20
            timeoutSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
