deployment/mlflow/base/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: myapp-cert
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /mlflow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
