deployment/mlflow/base/mlflow-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: mlflow
  name: mlflow-virtual-service
  namespace: mlflow
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  - istio-system/istio-ingressgateway

  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /mlflow/
    rewrite:
      uri: /
    route:
    - destination:
        host: mlflow.mlflow.svc.cluster.local
        port:
          number: 5000
      headers:
        response:
          set:
            X-Frame-Options: "SAMEORIGIN"
            Access-Control-Allow-Origin: DOMAIN
            Access-Control-Allow-Credentials: "true"
    corsPolicy:
      allowOrigins:
        - exact: DOMAIN
      allowMethods:
        - GET
        - POST
        - OPTIONS
      allowHeaders:
        - authorization
        - content-type
      allowCredentials: true
